[package]
name = "bevy_wasm_window_resize"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/Leinnan/bevy_wasm_window_resize"
homepage = "https://github.com/Leinnan/bevy_wasm_window_resize"
readme = "README.md"
license = "MIT"
keywords = ["bevy", "wasm", "web", "game"]
categories  = ["game-engines"]
description = "Bevy helper crate that makes application canvas match window size."

[dependencies.bevy]
version = "0.12"
default-features = false
features = ["bevy_winit"]

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
default-features = false
features = ["Window"]
