[package]
name = "bevy_wasm_window_resize"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/Leinnan/bevy_wasm_window_resize"
homepage = "https://github.com/Leinnan/bevy_wasm_window_resize"
readme = "README.md"
license = "MIT"
keywords = ["bevy", "wasm", "web", "game"]
categories = ["game-engines"]
description = "Bevy helper crate that makes application canvas match window size."

[dependencies.bevy]
# version = "0.15"
git = "https://github.com/bevyengine/bevy.git"
rev = "9386bd0114c44c9f00a2e9c41db1225aaa78d159"

default-features = false
features = ["bevy_winit"]

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
default-features = false
features = ["Window"]
